Update index - Copy.html

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" type="image/png" href="logo.svg">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../Assets/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -126,8 +126,8 @@
                 <div class="col-md-6 col-lg-4 animate-on-scroll">
                     <a href="../" class="work-item-link" data-bs-toggle="modal" data-bs-target="#projectModal" 
                        data-project-title="Creative Portfolio Website"
-                       data-project-img1="../Assets/images/Photo 1.png"
-                       data-project-img2="../Assets/images/Photo 4.png"
+                       data-project-img1="images/Photo 1.png"
+                       data-project-img2="images/Photo 4.png"
                        data-project-desc1="We developed a visually-driven portfolio for a digital artist, focusing on immersive animations and a unique user experience. The goal was to create a digital canvas that showcases the artwork in a memorable and interactive way."
                        data-project-desc2="The site features a custom cursor, scroll-triggered animations using the GSAP library, and a WebGL-powered background effect. The entire experience is built to be fluid and artistic, reflecting the client's creative style. It's a pure front-end showcase with no backend dependencies."
                        data-project-client="Ikhsan Winata"
@@ -135,7 +135,7 @@
                        data-project-service="Front-End Development & Animation"
                        data-project-tech="GSAP,Three.js,HTML5 Canvas">
                         <div class="work-item">
-                            <img src="../Assets/images/Photo 1.png" alt="Creative Portfolio Website">
+                            <img src="images/Photo 1.png" alt="Creative Portfolio Website">
                             <div class="work-overlay"><h5>Creative Portfolio Website</h5></div>
                         </div>
                     </a>
@@ -144,8 +144,8 @@
                 <div class="col-md-6 col-lg-4 animate-on-scroll" style="transition-delay: 0.1s;">
                     <a href="#" class="work-item-link" data-bs-toggle="modal" data-bs-target="#projectModal"
                        data-project-title="Responsive Corporate Site"
-                       data-project-img1="../Assets/images/Photo 2.png"
-                       data-project-img2="../Assets/images/Photo 3.png"
+                       data-project-img1="images/Photo 2.png"
+                       data-project-img2="images/Photo 3.png"
                        data-project-desc1="The goal for this project was to design and develop a clean, professional, and fully responsive corporate website for a leading tech startup. The site needed to effectively communicate the company's brand, services, and values to potential clients and investors. We focused on a minimalist design with clear typography and a user-friendly navigation structure."
                        data-project-desc2="The website is built on a lightweight framework for fast loading times and is optimized for search engines (SEO). It includes a dynamic blog, a team showcase, and a detailed services section. The responsive design ensures that the site looks and functions perfectly across all devices, from large desktop monitors to small mobile screens."
                        data-project-client="Ikhsan Winata"
@@ -153,7 +153,7 @@
                        data-project-service="Web Design & Development"
                        data-project-tech="HTML5 & CSS3,JavaScript">
                         <div class="work-item">
-                            <img src="../Assets/images/Photo 2.png" alt="Responsive Corporate Website">
+                            <img src="images/Photo 2.png" alt="Responsive Corporate Website">
                             <div class="work-overlay"><h5>Responsive Corporate Site</h5></div>
                         </div>
                     </a>
@@ -162,8 +162,8 @@
                 <div class="col-md-6 col-lg-4 animate-on-scroll" style="transition-delay: 0.2s;">
                     <a href="#" class="work-item-link" data-bs-toggle="modal" data-bs-target="#projectModal"
                        data-project-title="Dynamic Photo Gallery"
-                       data-project-img1="../Assets/images/Foto 3.png"
-                       data-project-img2="../Assets/images/Foto 2.png"
+                       data-project-img1="images/Foto 3.png"
+                       data-project-img2="images/Foto 2.png"
                        data-project-desc1="This project involved creating a dynamic and performant photo gallery for a professional photographer. The main requirement was to build a platform that could handle a large number of high-resolution images without sacrificing speed or user experience. We implemented lazy loading for images and a masonry grid layout to create a visually interesting and efficient browsing experience."
                        data-project-desc2="Users can interact with the images available in the gallery, with features like lightbox viewing, image filtering by categories, and a responsive design that adapts to various screen sizes. The gallery is built using Vue.js for reactive data handling and Contentful CMS for easy content management, allowing the photographer to update their portfolio seamlessly."
                        data-project-client="Ikhsan Winata"
@@ -171,7 +171,7 @@
                        data-project-service="Front-End & CMS Integration"
                        data-project-tech="Vue.js,Contentful CMS,CSS Grid">
                         <div class="work-item">
-                            <img src="../Assets/images/Foto 1.png" alt="Dynamic Photo Gallery">
+                            <img src="images/Foto 1.png" alt="Dynamic Photo Gallery">
                             <div class="work-overlay"><h5>Dynamic Photo Gallery</h5></div>
                         </div>
                     </a>
@@ -212,7 +212,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:ikhasnie89@gmail.com" onclick="copyEmail(event, 'ikhasnie89@gmail.com')" class="d-flex align-items-start email-link">
+                            <a href="https://mail.google.com/" onclick="copyEmail(event, 'ikhasnie89@gmail.com')" class="d-flex align-items-start email-link">
                                 <i class="fas fa-envelope"></i>
                                 <span>ikhasnie89@gmail.com</span>
                                 <span class="copy-message">Copied!</span>
