--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- External Libraries -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="icon" type="image/png" href="logo.svg">
+    <link rel="icon" type="image/png" href="logo.png">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
 
